fix problems with one figure

--- a/Session3.1/index.html
+++ b/Session3.1/index.html
@@ -468,7 +468,7 @@ The variance is `\(var(Z_{t})=var\Big(\sum_{j=1}^{t}W_{j}\Big)=\sum_{j=1}^{t}  \
 
 - The RW2 only models a linear combination of levels on consecutive time points: `\(Z_t-2Z_{t-1}+Z_{t-2}=W_t\)`
 
-&lt;center&gt;&lt;img src=./img/RW1_2.JPEG width='25%' title=''&gt;&lt;/center&gt;
+&lt;center&gt;&lt;img src=./img/RW1-2.png width='25%' title=''&gt;&lt;/center&gt;
 
 
 - The parameterization of the RW1 model in `R-INLA` is `\(Z_{t}|Z_{t-1}\sim N(Z_{t-1}, \sigma^2_{Z})\)`, and it is implemented through the specification `rw1`.
