fix problems with one figure

--- a/Session1.3/index.html
+++ b/Session1.3/index.html
@@ -166,7 +166,7 @@ where
 
 # Type of spatial data
 
-Cressie and Wikle (2015) distinguishes three types of spatial data, based on the nature of the spatial domain `\(\mathcal{D}\)`:
+Cressie (1993) distinguishes three types of spatial data, based on the nature of the spatial domain `\(\mathcal{D}\)`:
 
 &lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
 
@@ -418,7 +418,7 @@ We can extract and plot only the geometry with the function `st_geometry()`
 
 # References
 
-Cressie, N. and C. K. Wikle (2015). _Statistics for spatio-temporal data_. John Wiley &amp; Sons.
+Cressie, N. (1993). _Statistics for Spatial Data_. John Wiley &amp; Sons, Inc.
 
 Lovelace, R., J. Nowosad, and J. Muenchow (2019). _Geocomputation with R_. The online version of the book is at http://geocompr.robinlovelace.net/. CRC Press.
     </textarea>
