--- a/Session1.1/index.html
+++ b/Session1.1/index.html
@@ -189,6 +189,14 @@ name: WhyBayesian
 
 &lt;center&gt;&lt;img src=./img/BigPicture.png width='60%' title=''&gt;&lt;/center&gt;
 
+--
+
+&lt;span style="display:block; margin-top: -50px ;"&gt;&lt;/span&gt;
+
+- Several different ways of formulating statistical models and computing inferences from these models and data
+- Can be grouped into two broad approaches:
+  - Frequentist
+  - Bayesian
 ---
 
 # Everyday thought process
@@ -499,15 +507,10 @@ be summarised to provide
 
 # References
 
-Blangiardo, M. et al. (2015). _Spatial and spatio-temporal Bayesian models with R-INLA_. John Wiley &amp; Sons.
+Blangiardo, M. et al. (2015). _Spatial and spatio-temporal Bayesian models with R-INLA_. John Wiley &amp;
+Sons.
 
 Johnson, A. A. et al. (2022). _Bayes Rules!: An Introduction to Applied Bayesian Modeling_. CRC Press.
-
-Martins, T. G. et al. (2013). "Bayesian computing with INLA: New features". In: _Computational Statistics &amp; Data Analysis_ 67, pp.
-68-83.
-
-Rue, H. et al. (2009). "Approximate Bayesian inference for latent Gaussian model by using integrated nested Laplace approximations (with
-discussion)". In: _J. R. Statist. Soc. B_ 71, pp. 319-392.
 
 
 
