--- a/Session1.2/index.html
+++ b/Session1.2/index.html
@@ -134,7 +134,7 @@ After this lecture you should be able to
 
 &lt;span style="display:block; margin-top: 20px ;"&gt;&lt;/span&gt;
 
-The topics treated in this lecture are presented in Chapter 3  of the book Blangiardo and Cameletti (2015) and in Chapter 2 of the book Johnson, Ott, and Dogucu (2022).
+The topics treated in this lecture are presented in Chapter 3  of Blangiardo and Cameletti (2015) and in Chapter 2 of  Johnson, Ott, and Dogucu (2022).
 
 ---
 
@@ -235,7 +235,7 @@ These are .alert[**conditional probabilities**] and defining B the event: a pers
 
 # Some rules of conditional probabilities
 
-In general, comparing the conditional vs unconditional probabilities `\(P(B\mid A)\)` vs `\(P(A)\)`, reveals the extent to which information about `\(B\)` changes in light of `\(A\)` 
+In general, comparing the conditional vs unconditional probabilities `\(P(B\mid A)\)` vs `\(P(B)\)`, reveals the extent to which information about `\(B\)` changes in light of `\(A\)` 
 
 In some cases, the certainty of an event `\(B\)` might increase in light of new data `\(A\)`: 
 
