Typos in Practical 2!

--- a/Practical2/index.html
+++ b/Practical2/index.html
@@ -1785,7 +1785,7 @@ walking to school?</p></li>
 <p>A biologist hires you to study the density of a certain insect in the
 local region. Their prior idea about <span class="math inline">\(\theta\)</span>, the number of insects per<br />
 <span class="math inline">\(m^2\)</span> area, is well captured by a
-Gamma model with an expected value of <span class="math inline">\(0.5\)</span> insects per <span class="math inline">\(m^2\)</span> and a standard deviation of <span class="math inline">\(0.25\)</span> insects per <span class="math inline">\(m^2\)</span>. You then go out to inspect 5
+Gamma model with an expected value of <span class="math inline">\(0.5\)</span> insects per <span class="math inline">\(m^2\)</span> and a variance of <span class="math inline">\(0.25\)</span> insects per <span class="math inline">\(m^2\)</span>. You then go out to inspect 5
 separate <span class="math inline">\(m^2\)</span> areas of a nearby
 field. You count 3, 2, 5, 1, 2 insects.</p>
 <ol style="list-style-type: lower-alpha">
