--- a/Session4.1/index.html
+++ b/Session4.1/index.html
@@ -85,10 +85,10 @@ class: title-slide
 
 ###     
 
-### Bayesian modelling for Spatial and Spatio-temporal data, Imperial College 
+### Spatial and Spatio-Temporal Bayesian Models with `R-INLA`, Imperial College 
 
 &lt;!-- Can also separate the various components of the extra argument 'params', eg as in 
-### Bayesian modelling for Spatial and Spatio-temporal data, Imperial College, , MSc in Epidemiology
+### Spatial and Spatio-Temporal Bayesian Models with `R-INLA`, Imperial College, , MSc in Epidemiology
 --&gt;
 
 
@@ -105,7 +105,7 @@ layout: true
 MSc in Epidemiology 
 ]
 .alignright[
-Bayesian modelling for Spatial and Spatio-temporal data, NA 
+Spatial and Spatio-Temporal Bayesian Models with `R-INLA`, NA 
 ]
 ] 
 
@@ -599,7 +599,7 @@ And we can calculate quintiles with
 ```
 
 ```
-[1] 0.4996176 0.6744936 0.7257159 0.7735114 0.8337035 1.1555258
+[1] 0.5016691 0.6742474 0.7252368 0.7728775 0.8325362 1.1503755
 ```
 
 ---
@@ -645,7 +645,7 @@ To obtain the quantile ratio we need to follow these steps:
 
 ```
 Predictor:1 Predictor:2 Predictor:3 
-   1.371356    1.518272    1.485727 
+   1.962186    1.507282    1.239851 
 ```
 &lt;span style="display:block; margin-top: -10px ;"&gt;&lt;/span&gt;
 Note that:
@@ -679,7 +679,7 @@ Note that:
 ```
 
 ```
-[1] 11.36826
+[1] 10.7546
 ```
 
 - The `\(QR90\)` points towards a large spatial variability. 
@@ -762,10 +762,10 @@ where `\(x_{1i}\)` , `\(x_{2i}\)` are the seed type and root extract of the i `\
 
 ```
                   mean        sd 0.025quant   0.5quant 0.975quant       mode          kld
-(Intercept) -0.5573106 0.1290580 -0.8128318 -0.5566128 -0.3057575 -0.5551229 8.141460e-05
-x1           0.1432173 0.2272850 -0.3066092  0.1443640  0.5862926  0.1463687 6.017888e-05
-x2           1.3214742 0.1819023  0.9680552  1.3202582  1.6820314  1.3180323 9.645924e-05
-x1:x2       -0.7815996 0.3120993 -1.3948849 -0.7814952 -0.1691147 -0.7814959 4.969306e-05
+(Intercept) -0.5601519 0.1262619 -0.8077661 -0.5601552 -0.3125181 -0.5601615 4.506531e-11
+x1           0.1442069 0.2234632 -0.2940645  0.1442141  0.5824365  0.1442279 4.989154e-11
+x2           1.3231067 0.1778140  0.9743814  1.3231058  1.6718372  1.3231042 4.448016e-11
+x1:x2       -0.7787551 0.3068642 -1.3805782 -0.7787523 -0.1769479 -0.7787471 4.921512e-11
 ```
 
 ```r
@@ -774,12 +774,12 @@ x1:x2       -0.7815996 0.3120993 -1.3948849 -0.7814952 -0.1691147 -0.7814959 4.9
 
 ```
   ID          mean         sd  0.025quant      0.5quant 0.975quant          mode        kld
-1  1 -0.0103355441 0.06211783 -0.17943488 -8.454498e-04 0.04377829 -1.670834e-04 0.03280257
-2  2  0.0005949997 0.04749199 -0.07794005 -2.291544e-05 0.08598236  2.026897e-05 0.02229568
-3  3 -0.0123824254 0.06238287 -0.19682905 -1.137677e-03 0.03712337 -3.282143e-05 0.02335741
-4  4  0.0158317164 0.07312171 -0.03334043  1.441999e-03 0.24192536  3.201181e-04 0.02754597
-5  5  0.0063046878 0.05407668 -0.05320428  4.815531e-04 0.13605575  3.543913e-04 0.02878329
-6  6  0.0026606361 0.05648353 -0.07252901  3.664692e-04 0.10769889 -4.851865e-05 0.04532726
+1  1 -0.0006902849 0.01275086 -0.02851807 -2.975523e-04 0.02363600 -1.135438e-04 0.09205319
+2  2  0.0000675084 0.01257519 -0.02561843  2.986337e-05 0.02608940  6.900366e-06 0.07587582
+3  3 -0.0010626284 0.01287122 -0.03001535 -4.594320e-04 0.02252485 -1.992622e-04 0.10237880
+4  4  0.0012347762 0.01301257 -0.02209172  5.288365e-04 0.03080791  2.370271e-04 0.11608491
+5  5  0.0004560803 0.01266675 -0.02435709  1.976275e-04 0.02757658  6.552283e-05 0.08406094
+6  6  0.0001497882 0.01267034 -0.02541992  6.414647e-05 0.02648083  1.445500e-05 0.08438866
 ```
 
 ---
@@ -922,20 +922,20 @@ The assumptions are
 
 
 ```r
-&gt; asthma_formula1 &lt;- y ~ x + as.factor(dow) + f(ID, model="iid")
-&gt; asthma_model1 &lt;- inla(asthma_formula1, data=data,family="poisson",offset = E, control.predictor=list(compute=TRUE))
+&gt; asthma_formula1 &lt;- y ~  x + as.factor(dow) + f(ID, model="iid")
+&gt; asthma_model1 &lt;- inla(asthma_formula1, data=data,family="poisson",E = E, control.predictor=list(compute=TRUE),control.compute=list(config=TRUE,dic=TRUE, waic=TRUE, return.marginals.predictor=TRUE))
 ```
 
 
 .pull-left[To get the fitted values we run:
 
 ```
-                          mean       sd 0.025quant  0.5quant 0.975quant      mode
-fitted.Predictor.001  7.503591 1.863704   4.300281  7.352443  11.576539  7.060187
-fitted.Predictor.002  8.728280 2.019980   5.217256  8.576962  13.108621  8.283736
-fitted.Predictor.003 46.602489 4.792813  37.637212 46.451516  56.423628 46.152026
-fitted.Predictor.004  3.111749 1.151580   1.302755  2.965233   5.766465  2.684249
-fitted.Predictor.005  3.797450 1.289824   1.721835  3.648644   6.730828  3.362809
+                          mean        sd 0.025quant  0.5quant 0.975quant      mode
+fitted.Predictor.001  7.720713 0.5635112   6.619374  7.707814   8.915814  7.699630
+fitted.Predictor.002  7.439104 0.5343002   6.424919  7.412109   8.610526  7.380473
+fitted.Predictor.003 12.163639 0.8535795  10.493909 12.142124  13.987348 12.129253
+fitted.Predictor.004  4.457905 0.3661921   3.788251  4.435683   5.257418  4.402204
+fitted.Predictor.005 10.805929 0.7566406   9.381476 10.759863  12.483267 10.703467
 ```
 ]
 
@@ -970,8 +970,9 @@ The assumptions are
 
 ```r
 &gt; asthma_formula2 &lt;- y ~ x
-&gt; asthma_model2 &lt;- inla(asthma_formula2, data=data,family="gaussian",
-+                       control.predictor=list(link=1,compute=TRUE))
+&gt; asthma_model2 &lt;- inla(asthma_formula2, data=data,family="gaussian", E=E,
++                       control.predictor=list(link=1,compute=TRUE),
++                       control.compute=list(config=TRUE,dic=TRUE, waic=TRUE, return.marginals.predictor=TRUE))
 ```
 
 
@@ -979,12 +980,12 @@ The assumptions are
 .pull-left[To get the fitted values we run:
 
 ```
-                          mean       sd 0.025quant  0.5quant 0.975quant      mode
-fitted.Predictor.001 10.757647 2.428888   5.993702 10.757617   15.52213 10.757584
-fitted.Predictor.002 32.289257 1.633942  29.084428 32.289256   35.49434 32.289272
-fitted.Predictor.003 43.994430 2.285806  39.510989 43.994441   48.47815 43.994487
-fitted.Predictor.004 -5.757451 3.916548 -13.439219 -5.757505    1.92523 -5.757572
-fitted.Predictor.005 34.489499 1.708311  31.138794 34.489501   37.84045 34.489522
+                          mean        sd 0.025quant  0.5quant 0.975quant      mode
+fitted.Predictor.001  6.560510 0.2189199   6.131021  6.560510   6.990000  6.560495
+fitted.Predictor.002  9.121423 0.1472478   8.832544  9.121423   9.410302  9.121433
+fitted.Predictor.003 10.513605 0.2060187  10.109426 10.513605  10.917784 10.513619
+fitted.Predictor.004  4.596248 0.3530307   3.903653  4.596248   5.288844  4.596223
+fitted.Predictor.005  9.383114 0.1539531   9.081080  9.383114   9.685148  9.383125
 ```
 ]
 
@@ -1017,21 +1018,27 @@ fitted.Predictor.005 34.489499 1.708311  31.138794 34.489501   37.84045 34.48952
 ```r
 &gt; # Model 1
 &gt; Bayesian_p1 &lt;- c()
-&gt; for(i in 1:500){
-+ Bayesian_p1[i] &lt;- inla.pmarginal(y[i],asthma_model1$marginals.fitted.values[[i]])
-+ }
+&gt; model1_sample &lt;- matrix(NA,500,1000)
+&gt; model1_pois &lt;- matrix(NA,500,1000)
 &gt; 
-&gt; #Model 2
-&gt; Bayesian_p2 &lt;- c()
 &gt; for(i in 1:500){
-+ Bayesian_p2[i] &lt;- inla.pmarginal(y[i],asthma_model2$marginals.fitted.values[[i]])
++ model1_sample[i,] &lt;- inla.rmarginal(1000,asthma_model1$marginals.fitted.values[[i]])
++ for(j in 1:1000){
++ model1_pois[i,j] &lt;- rpois(1, model1_sample[i,j])
++ }
++ 
++ Bayesian_p1[i] &lt;- sum(model1_pois[i,]&lt;y[i])/1000
 + }
 ```
+
+
 ]
 
 .pull-right[
-&lt;img src="./img/unnamed-chunk-13-1.png" style="display: block; margin: auto;" width="75%"&gt;
+&lt;img src="./img/unnamed-chunk-14-1.png" style="display: block; margin: auto;" width="75%"&gt;
 ]
+
+
 
 - Ideally we would expect a uniform distribution of the p-values which would tell us there is no pattern of over(under) estimation in the prediction
 
@@ -1088,13 +1095,14 @@ where `\(\theta\)` identifies the parameter of the likelihood
 
   - Complexity measured by estimate of the "effective number of parameters":
 
-  `$$p_D = \overline{D} - D(\overline{\theta})$$`
+&lt;!--  `$$p_D = \textsf{E}_{\theta\mid y}\left[D(\theta)\right] + D(\textsf{E}_{\theta\mid y}\left[\theta \right])$$`
+--&gt;
 
 --
 
   - The DIC is then defined analogously to AIC as
 
-`$$\hbox{DIC} = \overline{D} + p_D$$`
+`$$\hbox{DIC} = D(\textsf{E}_{\theta\mid y}\left[\theta \right]) + 2p_D$$`
 
   - Models with smaller DIC are better supported by the data
 
@@ -1107,7 +1115,7 @@ where `\(\theta\)` identifies the parameter of the likelihood
 We run the model adding the `dic` (here for model 1, it is the same for model 2):
 
 ```r
-&gt; asthma_model1 &lt;- inla(asthma_formula1, data=data,family="poisson",E=E,control.predictor=list(link=1,compute=TRUE), 
+&gt; asthma_model1 &lt;- inla(asthma_formula1, data=data,family="gamma",control.predictor=list(link=1,compute=TRUE), 
 +                       control.compute=list(dic=TRUE))
 ```
 
@@ -1120,7 +1128,7 @@ And now check the value of the DIC
 ```
 
 ```
-[1] 3264.784
+[1] 2424.577
 ```
 
 ```r
@@ -1129,9 +1137,9 @@ And now check the value of the DIC
 ```
 
 ```
-[1] 4987.131
+[1] 2581.008
 ```
-The first model is without any doubt preferred as the DIC is (much!) smaller.
+The first model is without any doubt preferred as the DIC is smaller.
 
 ---
 
@@ -1187,7 +1195,7 @@ What is the alternative?
 We run the model adding the `waic` (here for model 1, it is the same for model 2):
 
 ```r
-&gt; asthma_model1 &lt;- inla(asthma_formula1, data=data,family="poisson",E=E,control.predictor=list(link=1,compute=TRUE), 
+&gt; asthma_model1 &lt;- inla(asthma_formula1, data=data,family="gamma",control.predictor=list(link=1,compute=TRUE), 
 +                       control.compute=list(waic=TRUE))
 ```
 
@@ -1200,7 +1208,7 @@ And now check the value of the DIC
 ```
 
 ```
-[1] 3169.651
+[1] 2422.371
 ```
 
 ```r
@@ -1209,7 +1217,7 @@ And now check the value of the DIC
 ```
 
 ```
-[1] 5004.256
+[1] 2581.84
 ```
 There is accordance between DIC and WAIC as the first model is still preferred as the WAIC  is smaller.
 
